--- a/css/default.css
+++ b/css/default.css
@@ -4,6 +4,8 @@
   --borderColor: #c1c1c1;
   --mainText: black;
   --secondaryText: #4b5156;
+
+  --themeDotBorder: #24292e;
 }
 
 html, body {
@@ -87,7 +89,6 @@ h6 {
   box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 3em 30em;
   grid-template-areas:
     'nav-wrapper nav-wrapper'
     'left-column right-column'
@@ -145,6 +146,61 @@ h6 {
 
 .left-column {
   grid-area: left-column;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+#profile_pic{
+  display: block;
+  margin: 0 auto;
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
+  border:2px solid var(--borderColor);
+}
+
+#theme-options-wrapper{
+  display: flex;
+  justify-content: center;
+}
+
+.theme-dot{
+  height: 30px;
+  width:30px;
+  background-color: black;
+  border-radius: 50%;
+
+  margin: 5px;
+  border: 2px solid var(--themeDotBorder);
+
+  -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+
+  cursor: pointer;
+
+}
+
+.theme-dot:hover{
+  border-width: 5px;
+}
+
+#light-mode{
+  background-color: #fff;
+}
+#blue-mode{
+  background-color: #192734;
+}
+#green-mode{
+  background-color: #78866b;
+}
+#purple-mode{
+  background-color: #7E4C74;
+}
+#settings-note{
+  font-style: italic;
+  font-size: 12px;
+  text-align: center;
 }
 
 .right-column {
