About section added

--- a/css/default.css
+++ b/css/default.css
@@ -220,7 +220,7 @@ h6 {
 #preview-shadow{
   background-color: var(--previewShadow);
   width: 300px;
-  height: 130px;
+  height: 190px;
   padding-left: 30px;
   padding-top: 30px;
 }
@@ -260,7 +260,29 @@ h6 {
   right:-5px;
 }
 
+.about-wrapper{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  padding-bottom: 50px;
+  padding-top: 50px;
+  gap:100px;
+}
 
+#skills{
+  display: flex;
+  justify-content: space-evenly;
+  background-color: var(--previewShadow);
+}
+
+.social-links{
+  display: grid;
+  align-content: center;
+  text-align: center;
+}
+
+#social_img{
+  width: 100%;
+}
 @media screen and (max-width:1200px) {
   .main-container {
     width: 95%;
