--- a/css/default.css
+++ b/css/default.css
@@ -12,6 +12,8 @@
   --previewBg: rgb(251, 249, 243, 0.8);
   --previewShadow: #f0ead6;
 
+  --buttonColor:black;
+
 }
 
 html, body {
@@ -283,6 +285,87 @@ h6 {
 #social_img{
   width: 100%;
 }
+
+.post-wrapper{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 320px);
+  gap:20px;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+
+.post{
+  border:1px solid var(--borderColor);
+
+  -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+
+}
+.thumbnail{
+  display: block;
+  width:100%;
+  height: 180px;
+  object-fit: cover;
+
+}
+
+.post-preview{
+  background-color: #fff;
+  padding: 15px;
+}
+
+.post-title{
+  color: black;
+  margin:0;
+}
+
+.post-intro{
+  color: #4b5156;
+  font-size: 14px;
+}
+
+#contact-form{
+	display: block;
+	max-width: 600px;
+	margin: 0 auto;
+	border: 1px solid var(--borderColor);
+	padding: 15px;
+	border-radius: 5px;
+	background-color: var(--mainColor);
+	margin-bottom: 50px;
+
+}
+
+#contact-form label{
+	line-height: 2.7em;
+}
+
+#contact-form textarea{
+	min-height: 100px;
+	font-size: 14px;
+}
+
+.input-field{
+	width: 100%;
+	padding-top: 10px;
+	padding-bottom:10px;
+	background-color: var(--secondaryColor);
+	border-radius: 5px;
+	border:1px solid var(--borderColor);
+	font-size: 14px;
+}
+
+#submit-btn{
+  margin-top: 10px;
+  width:100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color:#fff;
+  background-color: var(--buttonColor);
+  border: none;
+}
+
 @media screen and (max-width:1200px) {
   .main-container {
     width: 95%;
