--- a/css/default.css
+++ b/css/default.css
@@ -21,6 +21,10 @@ html, body {
   margin: 0;
 }
 
+body *{
+  transition: 0.3s;
+}
+
 h1, h2, h3, h4, h5, h6, strong {
   color: var(--mainText);
   font-family: 'Russo One', sans-serif;
@@ -33,7 +37,7 @@ p, li, span, label, input, textarea {
 
 a {
   text-decoration: none;
-  color: #17a2b8;
+  color:#17a2b8;
 }
 
 ul {
@@ -111,6 +115,10 @@ h6 {
   align-items: center;
   border-radius: 5px 5px 0 0;
   background-color: var(--mainColor)
+}
+
+#navigation a{
+  color:var(--mainText);
 }
 
 #navigation{
